# Lab-4-Template

./: .gitmodules  CMakeLists.txt  Report.md
.github/workflows/: classroom.yml
rtl/: ALU.sv  Adder.sv  Controller.sv  CoreTop.sv  Decoder.sv  Imm_Ext.sv  JB_Unit.sv  LD_Filter.sv  MUX2.sv  MUX3.sv  ROM.sv  RegFile.sv  Reg_D.sv  Reg_E.sv  Reg_M.sv  Reg_PC.sv  Reg_W.sv  Top.sv
src/: .clangd  CrossVerify.cpp  CrossVerify.sv
tests/: CMakeLists.txt
